[package]
name = "osmnodecache"
version = "0.8.4"
description = "Flat file OSM node cache to store (latitude,longitude) pairs as indexed entries"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/osm-node-cache"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["osm", "cache"]
categories = ["caching", "science::geo"]
rust-version = "1.60.0"

[dependencies]
bincode = "1"
dashmap = { version = "5", features = ["serde"] }
memmap2 = "0.9"
serde = "1"
serde_json = "1"
thiserror = "1"

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"], default-features = false }
osmpbf = "0.3"
rand = "0.8"
rayon = "1"

[workspace]
# Use `just bench` or `cargo bench -p bench` to run the benchmarks.
members = ["bench"]
