[package]
name = "osmnodecache"
version = "0.10.0"
description = "Flat file OSM node cache to store (latitude,longitude) pairs as indexed entries"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/osm-node-cache"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["osm", "cache"]
categories = ["caching", "science::geo"]
rust-version = "1.85"

[features]
default = []

[dependencies]
bincode = { version = "2", features = ["serde", "alloc"] }
dashmap = { version = "6", features = ["serde"] }
memmap2 = "0.9"
serde_json = "1"
thiserror = "2"

[dev-dependencies]
rand = "0.9"
rayon = "1"

[lints]
workspace = true

[workspace]
resolver = "2"
# Use `just bench` or `cargo bench -p bench` to run the benchmarks.
members = [".", "bench"]
default-members = ["."]

[workspace.lints.rust]
unused_qualifications = "warn"

[workspace.lints.clippy]
# Restrictions
panic_in_result_fn = "warn"
# TODO: todo = "warn"
# TODO: unwrap_used = "warn"
# Pedantics without being too noisy
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
